# vgi-lint-check

./: .gitignore  CLAUDE.md  README.md  RULES.md  TAGS.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/tutorials/: convert-units-in-sql.vgi.md  count-llm-tokens-for-rag.vgi.md  wcag-contrast-audit.vgi.md
examples/tutorials/calendar/: business-days-between-dates.vgi.md  expand-recurring-events-rrule.vgi.md  index.vgi.yaml  trading-calendar-gotchas.vgi.md
scripts/: gen_rules_doc.py  migrate_fleet_waivers.py  unpin_fleet_linter.py
src/vgi_lint_check/: __init__.py  __main__.py  baseline.py  cli.py  comparison.py  config.py  connection.py  core.py  corpus.py  diff.py  exit_codes.py  findings.py  fleet.py  levels.py  linkcheck.py  loader.py  model.py  result.py  review.py  scoring.py  simulate.py  snapshot.py  sql_parse.py  tags.py  trace.py  versions.py
src/vgi_lint_check/reporting/: __init__.py  _collapse.py  agent_reporter.py  json_reporter.py  terminal.py
src/vgi_lint_check/rules/: __init__.py  _util.py  ai.py  attach_options.py  base.py  catalog.py  columns.py  constraints.py  content.py  descriptions.py  discoverability.py  engine.py  examples.py  execution.py  functions.py  pragmas.py  registry.py  settings.py  structure.py  tags.py  tutorials.py
src/vgi_lint_check/schema/: report-v1.json  report-v2.json
src/vgi_lint_check/tutorials/: __init__.py  fences.py  frontmatter.py  hub.py  jsonld.py  loader.py  model.py  render.py  runner.py  scaffold.py  suggest.py  wasm.py
tests/: conftest.py  fixtures.py
tests/fixtures/: snapshot_volcanos.json
tests/integration/: conftest.py  test_live_worker.py
tests/unit/: test_ai.py  test_attach_options.py  test_catalog_discoverability.py  test_categories.py  test_check_sampling.py  test_cli.py  test_config.py  test_consistency.py  test_constraint_discovery.py  test_content.py  test_corpus.py  test_diff_versions.py  test_end_to_end.py  test_executable_examples.py  test_fk_sampling.py  test_levels_and_waivers.py  test_linkcheck.py  test_loader.py  test_relationships.py  test_reporting.py  test_result_schema.py  test_review.py  test_rules.py  test_rules_added.py  test_scan_probe.py  test_scoring_baseline.py  test_seams.py  test_simulate.py  test_strict_rules.py  test_trace.py  test_tutorials.py
