[project]
name = "vgi-lint-check"
version = "0.51.0"
description = "A pydoclint-style metadata-quality linter for VGI workers."
readme = "README.md"
keywords = [
    "vgi",
    "duckdb",
    "haybarn",
    "linter",
    "metadata",
    "data-quality",
    "documentation",
    "catalog",
    "data-engineering",
    "cli",
]
license = { file = "LICENSE" }
authors = [{ name = "Rusty Conover", email = "rusty@query.farm" }]
maintainers = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: Other/Proprietary License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    # haybarn ships only release candidates; the >=...rc1 specifier lets PEP 440
    # installers (pip/uv) select the prerelease. Cap the minor so a future
    # breaking RC can't silently be pulled into installs of this version.
    "haybarn>=1.5.4rc1,<1.6",
    "click>=8.1",
    "rich>=13",
    "markdown-it-py>=3",  # parse vgi.description_md (validity + link extraction)
    "packaging>=23",  # validate data_version_spec ranges and release versions
    # Needed by DuckDB/haybarn to materialize timezone-aware timestamps that
    # workers publish in vgi_catalogs() release metadata.
    "pytz>=2024.1",
]

[project.urls]
Homepage = "https://query.farm"
Repository = "https://github.com/Query-farm/vgi-lint-check"
Issues = "https://github.com/Query-farm/vgi-lint-check/issues"

[project.scripts]
vgi-lint = "vgi_lint_check.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "twine>=5",
    "jsonschema>=4",
    "ruff>=0.6",
    "mypy>=1.11",
    "pydoclint>=0.5",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
markers = [
    "live: tests that attach to a running VGI worker (network/subprocess); skipped by default",
]

# --- tooling adopted from vgi-python --------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests, scripts, and the generated-doc script don't need full docstrings.
"tests/**" = ["D"]
"scripts/**" = ["D"]
# Rule classes are declarative and self-documenting via their code/name/summary/
# targets attributes (surfaced by `vgi-lint rules`/`explain` and RULES.md), so
# the missing-docstring rules add no value there.
"src/vgi_lint_check/rules/**" = ["D101", "D102", "D103", "D106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src/vgi_lint_check"]

[[tool.mypy.overrides]]
module = ["haybarn", "haybarn.*"]
ignore_missing_imports = true

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = false
skip_checking_raises = true
allow_init_docstring = true

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
